--- a/about.html
+++ b/about.html
@@ -26,10 +26,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="/index.html">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="https://madbro246.github.io/cv/">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/about.html">About</a>
+                    <a class="nav-link" href="#">About</a>
                 </li>
 
 
@@ -46,7 +46,7 @@
 
             </div>
             <div class="col-4">
-                <img class="img-fluid" img src="/5.png" class="rounded" alt="Cinque Terre">
+                <img class="img-fluid" img src="/cv/5.png " class="rounded" alt="Cinque Terre">
                 <h2>
                     <p class="font-weight-bolder">Shahid mm</p>
                 </h2>
