--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
 
             </div>
             <div class="col-4">
-                <img class="img-fluid" img src="cv/5.png " class="rounded" alt="">
+                <img class="img-fluid" img src="https://ibb.co/rwrCQ2F" class="rounded" alt="">
                 <h2>
                     <p class="font-weight-bolder">Shahid mm</p>
                 </h2>
