--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <title><MADBRO></title>
     
+        <div style="line-height:16px;text-align:center;"><a href="https://www.tracemyip.org/tools/cookie-free-tracking-analytics-eu-cookie-law-solution/"><img src="//s2.tracemyip.org/tracker/1213/4684NR-IPIB/91864/11/njsUrl/" alt="Free cookie free visitor tracer" style="border:0px;"></a></div>
 </head>
 
 <body>
