--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <title><MADBRO></title>
     
-        <div style="line-height:16px;text-align:center;"><a href="https://www.tracemyip.org/tools/cookie-free-tracking-analytics-eu-cookie-law-solution/">< alt="Free cookie free visitor tracer" style="border:0px;"></a></div>
+        
 </head>
 
 <body>
@@ -124,6 +124,7 @@
             </div>
           </div>
       </div>
+    <div style="line-height:16px;text-align:center;"><a title="website hits ipv4 addresses traffic counter" href="https://www.tracemyip.org/tools/website-visitors-counter-traffic-tracker-statistics/"><img src="//s2.tracemyip.org/tracker/1209/4684NR-IPIB/91864/11/njsUrl/" alt="website hits ipv4 addresses traffic counter" style="border:0px;"></a></div>
 
 
 
